fix: update meta title in index.html, clean up unused imports in chart.tsx, and remove HISTORY_KEY from storage.ts

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <!-- Primary Meta Tags -->
     <title>TypeIn - Minimalist Writing App</title>
-    <meta name="title" content="TypeIn - Minimalist Writing App">
+    <meta name="title" content="/typein - Minimalist Writing App">
     <meta name="description" content="A clean, distraction-free writing space for your thoughts. Perfect for daily journaling and quick notes.">
 
     <!-- Open Graph / Facebook -->
