--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     
     <!-- Primary Meta Tags -->
     <title>TypeIn - Minimalist Writing App</title>
-    <meta name="title" content="typein - Minimalist Writing App">
+    <meta name="title" content="typein - your life history">
     <meta name="description" content="A clean, distraction-free writing space for your thoughts. Perfect for daily journaling and quick notes.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://typein.vercel.app/">
-    <meta property="og:title" content="TypeIn - Minimalist Writing App">
+    <meta property="og:title" content="typein - your life history">
     <meta property="og:description" content="A clean, distraction-free writing space for your thoughts. Perfect for daily journaling and quick notes.">
     <meta property="og:image" content="https://typein.vercel.app/typeinbanner.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://typein.vercel.app/">
-    <meta property="twitter:title" content="TypeIn - Minimalist Writing App">
+    <meta property="twitter:title" content="typein - your life history">
     <meta property="twitter:description" content="A clean, distraction-free writing space for your thoughts. Perfect for daily journaling and quick notes.">
     <meta property="twitter:image" content="https://typein.vercel.app/typeinbanner.png">
   </head>
