fix: prepend slash to meta title in index.html for consistency with branding

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
-    <title>typein - your life history</title>
+    <title>/typein - your life history</title>
     <meta name="title" content="typein - your life history">
     <meta name="description" content="A clean, distraction-free writing space for your thoughts. Perfect for daily journaling and quick notes.">
 
